--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,32 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+
+ipykernel==6.16.0
+ipython==8.5.0
+ipython-autotime==0.3.1
+
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyter_client==7.3.5
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+Markdown==3.4.1
+
+matplotlib==3.6.0
+matplotlib-inline==0.1.6
+
+numpy==1.23.3
+
+packaging==21.3
+pandas==1.5.0
+pandas-ml==0.6.1
+pandocfilters==1.5.0
+
+scikit-learn==1.1.2
+scipy==1.9.1
+seaborn==0.12.0
+xgboost==1.6.2
+
